# notedeck-iOS

./: .gitignore  Cargo.toml
.beads/: issues.jsonl
.cargo/: config.toml
.github/workflows/: build-and-test.yml  rust.yml
crates/egui-ios/: Cargo.toml  README.md
crates/egui-ios/src/: input.rs
crates/notedeck/: Cargo.toml
crates/notedeck/src/: app.rs  clipboard.rs  context.rs  imgcache.rs  lib.rs
crates/notedeck/src/media/: network.rs
crates/notedeck/src/note/: mod.rs
crates/notedeck_chrome/: Cargo.toml
crates/notedeck_chrome/src/: chrome.rs  ios.rs  lib.rs  notedeck.rs
crates/notedeck_clndash/: Cargo.toml
crates/notedeck_columns/: Cargo.toml
crates/notedeck_columns/src/ui/: account_login_view.rs  wallet.rs
crates/notedeck_columns/src/ui/profile/: edit.rs
crates/notedeck_columns/src/ui/search/: mod.rs
crates/notedeck_dave/: Cargo.toml
crates/notedeck_dave/src/: lib.rs
crates/notedeck_ios/: Cargo.toml  README.md  build.rs
crates/notedeck_ios/scripts/: build_debug.sh  build_release.sh
crates/notedeck_ios/src/: ffi.rs  input.rs  lib.rs  output.rs  renderer.rs
crates/notedeck_ui/: Cargo.toml
crates/notedeck_ui/src/: app_images.rs  context_menu.rs
ios-app/NotedeckMobile/: project.yml
ios-app/NotedeckMobile/Notedeck.xcodeproj/: project.pbxproj
ios-app/NotedeckMobile/NotedeckMobile/: Info.plist  NotedeckMobile.entitlements  NotedeckMobileApp.swift
ios-app/NotedeckMobile/NotedeckMobile/Views/: NotedeckRendererController.swift  NotedeckUIView.swift  NotedeckView.swift
