[package]
name = "notedeck_ui"
edition = "2021"
version.workspace = true

[dependencies]
egui = { workspace = true }
egui_extras = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
ehttp = { workspace = true }
nostrdb = { workspace = true }
tracing = { workspace = true }
poll-promise = { workspace = true }
profiling = { workspace = true }
tokio = { workspace = true }
notedeck = { workspace = true }
image = { workspace = true }
bitflags = { workspace = true }
enostr = { workspace = true }
hashbrown = { workspace = true }

# eframe and egui-winit only available on non-iOS platforms
[target.'cfg(not(target_os = "ios"))'.dependencies]
eframe = { workspace = true }
egui-winit = { workspace = true }
